feat(vm-logs): scroll (#1399)
* docs: LogView Plugin description corrected

* fix(config): remove outdated config properties (#1365)

* feat(vm-logs): scroll

* fix merge conflict

* fix tests

* fix autoscroll refresh

* move selector

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1451,7 +1451,8 @@
     "LIST": {
       "DATE": "Дата",
       "LOG_FILE": "Файл",
-      "TEXT": "Текст"
+      "TEXT": "Текст",
+      "SHOW_MORE": "Показать еще"
     },
     "FAB": {
       "FOLLOW_LOG": "Отслеживать",
