--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1455,7 +1455,8 @@
     "LIST": {
       "DATE": "Date",
       "LOG_FILE": "Log file",
-      "TEXT": "Text"
+      "TEXT": "Text",
+      "SHOW_MORE": "Show more"
     },
     "FAB": {
       "FOLLOW_LOG": "Follow log",
