--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1502,7 +1502,7 @@
       "KEYBOARD_LAYOUT": "Keyboard layout"
     },
     "VM_LOGS": {
-      "TITLE": "LogView",
+      "TITLE": "Log View (real-time mode)",
       "SHOW_LAST_MESSAGES": "Show last (messages)",
       "SHOW_LAST_MINUTES": "Show last (minutes)"
     }
