--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1498,8 +1498,8 @@
       "KEYBOARD_LAYOUT": "Раскладка клавиатуры"
     },
     "VM_LOGS": {
-      "TITLE": "Просмотр логов",
-      "SHOW_LAST_MESSAGES": "Показывать последние (сообщений)",
+      "TITLE": "Просмотр логов (режим реального времени)",
+      "SHOW_LAST_MESSAGES": "Максимальное количество сообщений",
       "SHOW_LAST_MINUTES": "Показывать последние (минут)"
     }
   },
