feat(vm-logs): settings (#1401)
* feat(vm-logs): realtime logs (#1358)

* feat(vm-logs): VM logs plugin (#1330)

* vm logs mock

* vm logs

* feat(vm-logs): show vm logs

* vm logs

* add tests

* fix action name

* fix selector name

* fix monospace text in column header

* feat(vm-logs): replace show logs icon button with text button

* feat(vm-logs): keyword filtering

* feat(vm-logs): save vm log keywords in query params

* feat(vm-logs): filter by dates

* feat(vm-logs): filter by dates

* v1.10.1

* fix tests

* fix version

* fix package.json

* sort by timestamp

* fix timestamp

* feat(vm-logs): filter vms by account

* refactor date picker label

* refactor labels

* refactor labels

* fix IE

* feat(vm-logs): newest first (#1346)

* vm logs mock

* vm logs

* feat(vm-logs): show vm logs

* vm logs

* add tests

* fix action name

* fix selector name

* fix monospace text in column header

* feat(vm-logs): replace show logs icon button with text button

* feat(vm-logs): keyword filtering

* feat(vm-logs): save vm log keywords in query params

* feat(vm-logs): filter by dates

* feat(vm-logs): filter by dates

* v1.10.1

* fix tests

* fix version

* fix package.json

* sort by timestamp

* fix timestamp

* feat(vm-logs): filter vms by account

* refactor date picker label

* refactor labels

* refactor labels

* fix IE

* feat(vm-logs): newest first sorting

* add types

* add types

* fix newest first

* fix typings

* fix typings

* fix typings

* feat(vm-logs): log files (#1351)

* feat(vm-logs): log files

* feat(vm-logs): log files

* code style

* feat(vm-logs): realtime logs

* feat(vm-logs): disable auto update on show logs click

* VM logs (#1362)

* refactor(vm): get rid of BaseModel for VM model (#1180)

PR close #1104

* build(code-coverage): enable source-maps by default (#1347)

This is a workaround to fix co

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1500,6 +1500,11 @@
     "VM_PREFERENCES": {
       "TITLE": "VM preferences",
       "KEYBOARD_LAYOUT": "Keyboard layout"
+    },
+    "VM_LOGS": {
+      "TITLE": "Log View (real-time mode)",
+      "SHOW_LAST_MESSAGES": "Show last (messages)",
+      "SHOW_LAST_MINUTES": "Show last (minutes)"
     }
   },
   "CLIPBOARD": {
