--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1496,6 +1496,11 @@
     "VM_PREFERENCES": {
       "TITLE": "Настройки ВМ",
       "KEYBOARD_LAYOUT": "Раскладка клавиатуры"
+    },
+    "VM_LOGS": {
+      "TITLE": "Просмотр логов (режим реального времени)",
+      "SHOW_LAST_MESSAGES": "Максимальное количество сообщений",
+      "SHOW_LAST_MINUTES": "Показывать последние (минут)"
     }
   },
   "CLIPBOARD": {
