--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-SSHkeys.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-SSHkeys.po
@@ -214,7 +214,7 @@ msgid ""
 "description is saved to account tags."
 msgstr ""
 "Описание ключа можно редактировать, кликнув на |edit icon|. Измените описание "
-"ключа в текстовом поле и сохраните изменения."
+"ключа в текстовом поле и сохраните изменения. Описание будет сохранено в теги аккаунта."
 
 #: ../../CSUI-SSHkeys.rst:80
 msgid "SSH Key Action Box"
