Readme screenshots updated

--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-LogView.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-LogView.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-09 09:52+0700\n"
-"PO-Revision-Date: 2018-11-09 14:23+0700\n"
+"PO-Revision-Date: 2018-11-12 15:01+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -323,7 +323,7 @@ msgid ""
 "set the number of minutes from 1 (default) to 10."
 msgstr ""
 "**Показывать за последние (минуты)** - время, за которое вы желаете видеть "
-"записи; доспустимые значения - от 1 (по умолчанию) до 10 минут."
+"записи; допустимые значения - от 1 (по умолчанию) до 10 минут."
 
 #: ../../CSUI-LogView.rst:110
 msgid ""
