--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Settings.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Settings.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-12 14:56+0700\n"
-"PO-Revision-Date: 2018-11-12 15:01+0700\n"
+"POT-Creation-Date: 2018-11-12 15:13+0700\n"
+"PO-Revision-Date: 2018-11-12 15:14+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -244,11 +244,11 @@ msgstr "Упрощенная китайская раскладка"
 #: ../../CSUI-Settings.rst:97
 msgid ""
 "The selected option will appear in the VNC console kayboard layout parameter "
-"when accessing a VM via concole. The selected option is also saved to account "
+"when accessing a VM via concole. The selected option is also saved to user "
 "tags."
 msgstr ""
 "Выбранная опция появится в параметрах раскладки клавиатуры в консоли VNC  при "
-"доступе к ВМ через консоль. Заданные настройки также сохраняются в теги "
+"доступе к ВМ через консоль. Заданные настройки сохраняются в теги пользователя."
 
 #: ../../CSUI-Settings.rst:100
 msgid "Look and Feel"
