--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-LogView.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-LogView.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-09 09:52+0700\n"
-"PO-Revision-Date: 2018-11-12 15:01+0700\n"
+"POT-Creation-Date: 2018-11-22 12:33+0700\n"
+"PO-Revision-Date: 2018-11-22 12:36+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -163,14 +163,14 @@ msgstr ""
 
 #: ../../CSUI-LogView.rst:49
 msgid ""
-"Time - Allows selecting logs for a specific time period within the selected "
-"dates. By default, 00:00 is defined for the start time and 23:59 is defined for "
-"the end time. Enter start and end time you wish into the fields to set a custom "
-"time period."
+"Time - Allows filtering logs for a specific time period within the selected "
+"dates. The time format is determined by the time format setting specified under "
+"the \"Settings\" section.  Enter start and end time you wish into the fields to "
+"set a custom time period."
 msgstr ""
 "Время - Позволяет задать конкретный промежуток времени в рамках заданного "
-"периода. По умолчанию, для начального времени установлено значение 00:00, а для "
-"конечного - 23:59. Вы можете ввести желаемое время в полях для начального и "
+"периода. Формат времени определяется настройкой формата, заданной в разделе "
+"\"Настройки\". Вы можете ввести желаемое время в полях для начального и "
 "конечного времени."
 
 #: ../../CSUI-LogView.rst:53
