--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -782,9 +782,11 @@
       "GROUP_BY": "Группировать по",
       "SELECT_ACCOUNTS": "Выберите аккаунты",
       "SELECT_TYPES": "Выберите типы",
+      "SELECT_VMS": "Выберете ВМ",
+      "SELECT_DATE": "Выберите дату",
       "GROUP_BY_TYPES": "Типам",
-      "GROUP_BY_ACCOUNTS": "Аккаунтам",
-      "SELECT_DATE": "Выберите дату"
+      "GROUP_BY_VMS": "ВМ",
+      "GROUP_BY_ACCOUNTS": "Аккаунтам"
     },
     "SIDEBAR": {
       "DETAILS": "Детали",
