--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -31,7 +31,9 @@
     "YES": "Yes",
     "SEARCH": "Search",
     "CONTINUE": "Continue",
-    "AGREE": "I agree"
+    "AGREE": "I agree",
+    "NAME": "Name",
+    "VOLUME": "Volume"
   },
   "DIALOG_MESSAGES": {
     "ACCOUNT": {
@@ -55,6 +57,10 @@
       "CONFIRM_REVERTING": "Are you sure you want to revert the owning volume to this snapshot?",
       "CONFIRM_REVERTING_WITH_VM_REBOOT": "Are you sure you want to revert the owning volume to this snapshot? <b>Virtual Machine will be rebooted.</b>",
       "CONFIRM_ALL_DELETION": "Delete this volume's snapshots?"
+    },
+    "VM_SNAPSHOT": {
+      "CONFIRM_DELETION": "Are you sure you want to delete this snapshot?",
+      "CONFIRM_REVERTING": "Are you sure you want to revert VM to this snapshot?"
     },
     "TAG": {
       "CONFIRM_DELETION": "Are you sure you want to delete this tag?"
@@ -167,6 +173,17 @@
       "REVERT_IN_PROGRESS": "Reverting a disk",
       "REVERT_DONE": "Disk reverted",
       "REVERT_FAILED": "Failed to revert a disk"
+    },
+    "VM_SNAPSHOTS": {
+      "TAKE_SNAP_FROM_VM_SNAP_IN_PROGRESS": "Taking a snapshot",
+      "TAKE_SNAP_FROM_VM_SNAP_DONE": "Snapshot taken",
+      "TAKE_SNAP_FROM_VM_SNAP_FAILED": "Failed to take a snapshot",
+      "DELETION_IN_PROGRESS": "Deleting a VM snapshot",
+      "DELETION_DONE": "VM snapshot deleted",
+      "DELETION_FAILED": "Failed to delete a VM snapshot",
+      "REVERT_IN_PROGRESS": "Reverting a VM",
+      "REVERT_DONE": "VM reverted",
+      "REVERT_FAILED": "Failed to revert a VM"
     },
     "TEMPLATE": {
       "REGISTER_DONE": "Template registered",
@@ -747,7 +764,7 @@
   "SNAPSHOT_PAGE": {
     "CARD": {
       "VOLUME": "Volume",
-      "VM": "Virtual Machine",
+      "VM_NAME": "VM name",
       "VOLUME_DELETED": "Deleted",
       "VM_DELETED": "Deleted",
       "CREATED": "Created"
@@ -761,13 +778,15 @@
     },
     "FILTERS": {
       "VOLUME": "Volume",
-      "VM": "Virtual Machines",
+      "VM": "VM",
       "GROUP_BY": "Group by",
       "SELECT_ACCOUNTS": "Select accounts",
       "SELECT_TYPES": "Select types",
+      "SELECT_VMS": "Select VMs",
+      "SELECT_DATE": "Select a date",
       "GROUP_BY_TYPES": "Types",
-      "GROUP_BY_ACCOUNTS": "Accounts",
-      "SELECT_DATE": "Select a date"
+      "GROUP_BY_VMS": "VMs",
+      "GROUP_BY_ACCOUNTS": "Accounts"
     },
     "SIDEBAR": {
       "DETAILS": "Details",
@@ -792,7 +811,12 @@
       "CREATE_TEMPLATE": "Create template",
       "CREATE_VOLUME": "Create volume",
       "REVERT_TO_SNAPSHOT": "Revert volume to snapshot",
-      "DELETE_SNAPSHOT": "Delete"
+      "DELETE_SNAPSHOT": "Delete",
+      "CREATE_SNAP_FROM_VM_SNAP": "Create volume snapshot",
+      "REVERT_VM_TO_SNAPSHOT": "Revert VM to snapshot"
+    },
+    "MODALS": {
+      "TAKE_A_SNAPSHOT": "Take a snapshot"
     }
   },
   "SECURITY_GROUP_PAGE": {
@@ -1647,6 +1671,9 @@
     "BACKINGUP": "Backing up",
     "ALLOCATED": "Allocated",
     "ERROR": "Error"
+  },
+  "VM_SNAPSHOT_STATE": {
+    "READY": "Ready"
   },
   "VM_STATE": {
     "RUNNING": "Running",
