--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -350,7 +350,7 @@
       "SELECT_ZONES": "Select zones",
       "SELECT_GROUPS": "Select groups",
       "SELECT_STATES": "Select states",
-      "NO_GROUP": "No group",
+      "NO_GROUP": "Default group",
       "STATE_RUNNING": "Running",
       "STATE_STOPPED": "Stopped",
       "STATE_DESTROYED": "Destroyed",
@@ -383,7 +383,7 @@
       },
       "INSTANCE_GROUP": {
         "TITLE": "Group",
-        "NO_GROUP": "No group",
+        "NO_GROUP": "Default group",
         "CHANGE_INSTANCE_GROUP": "Change instance group",
         "CREATE_NEW_GROUP": "Create a new group",
         "CHOOSE_EXISTING_GROUP": "Choose an existing group",
@@ -558,7 +558,7 @@
       "DISK_OFFERING": "Disk offering",
       "DISK_SIZE": "Disk size",
       "GROUP": "Group",
-      "NO_GROUP": "No group",
+      "NO_GROUP": "Default group",
       "AFFINITY_GROUP": "Affinity group",
       "SECURITY_GROUPS": "Firewall rules",
       "KB_US": "Standard (US) keyboard",
