--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -350,7 +350,7 @@
       "SELECT_ZONES": "Выберите зоны",
       "SELECT_GROUPS": "Выберите группы",
       "SELECT_STATES": "Выберите статусы",
-      "NO_GROUP": "Без группы",
+      "NO_GROUP": "По умолчанию",
       "STATE_RUNNING": "Запущенные",
       "STATE_STOPPED": "Остановленные",
       "STATE_DESTROYED": "Удаленные",
@@ -383,7 +383,7 @@
       },
       "INSTANCE_GROUP": {
         "TITLE": "Группа",
-        "NO_GROUP": "Без группы",
+        "NO_GROUP": "По умолчанию",
         "CHANGE_INSTANCE_GROUP": "Изменение группы",
         "CREATE_NEW_GROUP": "Создать новую",
         "CHOOSE_EXISTING_GROUP": "Выбрать существующую",
@@ -558,7 +558,7 @@
       "DISK_OFFERING": "Дисковое предложение",
       "DISK_SIZE": "Размер диска",
       "GROUP": "Группа",
-      "NO_GROUP": "Без группы",
+      "NO_GROUP": "По умолчанию",
       "AFFINITY_GROUP": "Аффинитетная группа",
       "SECURITY_GROUPS": "Брандмауэр",
       "KB_US": "Стандартная раскладка (США)",
