feat(vm): show uuid in sidebar (#1462)
* feat(vm): show uuid in sidebar

* review fix

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -379,7 +379,8 @@
       "DETAILS": {
         "TITLE": "Details",
         "ZONE": "Zone",
-        "HOST_NAME": "VM host name"
+        "HOST_NAME": "VM host name",
+        "ID": "ID"
       },
       "INSTANCE_GROUP": {
         "TITLE": "Group",
