feat(vm): native instance groups (#1456)
* instance groups

* instance group

* instance groups

* fix tests

* fix tests

* rename default group

* review fixes

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -350,7 +350,7 @@
       "SELECT_ZONES": "Select zones",
       "SELECT_GROUPS": "Select groups",
       "SELECT_STATES": "Select states",
-      "NO_GROUP": "No group",
+      "NO_GROUP": "Default group",
       "STATE_RUNNING": "Running",
       "STATE_STOPPED": "Stopped",
       "STATE_DESTROYED": "Destroyed",
@@ -384,7 +384,7 @@
       },
       "INSTANCE_GROUP": {
         "TITLE": "Group",
-        "NO_GROUP": "No group",
+        "NO_GROUP": "Default group",
         "CHANGE_INSTANCE_GROUP": "Change instance group",
         "CREATE_NEW_GROUP": "Create a new group",
         "CHOOSE_EXISTING_GROUP": "Choose an existing group",
@@ -559,7 +559,7 @@
       "DISK_OFFERING": "Disk offering",
       "DISK_SIZE": "Disk size",
       "GROUP": "Group",
-      "NO_GROUP": "No group",
+      "NO_GROUP": "Default group",
       "AFFINITY_GROUP": "Affinity group",
       "SECURITY_GROUPS": "Firewall rules",
       "KB_US": "Standard (US) keyboard",
@@ -578,7 +578,6 @@
       "PRIMARY_STORAGE": "Primary storage",
       "CREATING_SG": "Creating a security group...",
       "DEPLOYING_VM": "Deploying the virtual machine...",
-      "CREATING_INSTANCE_GROUP": "Creating an instance group...",
       "TAG_COPYING": "Copying template tags...",
       "DEPLOYMENT_FINISHED": "Deployment finished",
       "OS_TEMPLATE": "OS template",
