--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Settings.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Settings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-12 15:13+0700\n"
-"PO-Revision-Date: 2018-11-20 09:04+0700\n"
+"PO-Revision-Date: 2018-12-06 11:23+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -343,9 +343,9 @@ msgid ""
 "`plugin page <https://github.com/bwsw/cloudstack-ui/wiki/Log-View-Plugin>`_ "
 "for installation instructions."
 msgstr ""
-"Данный раздел доступен, если подключен плагин LogView. Инструкцию по установке "
-"плагина можно найти на `странице плагина <https://github.com/bwsw/cloudstack-"
-"ui/wiki/Log-View-Plugin>`_."
+"Данный раздел доступен, если подключен плагин Log View. Инструкцию по "
+"установке плагина можно найти на `странице плагина <https://github.com/bwsw/"
+"cloudstack-ui/wiki/Log-View-Plugin>`_."
 
 #: ../../CSUI-Settings.rst:142
 msgid ""
