--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -49,7 +49,7 @@
       "CONFIRM_REGENERATE_KEY": "Are you sure you want to regenerate key for this user?"
     },
     "ISO": {
-      "CONFIRM_DETACHMENT": "Are you sure you want ot detach this ISO?",
+      "CONFIRM_DETACHMENT": "Are you sure you want to detach this ISO?",
       "CONFIRM_DELETION": "Are you sure you want to delete this ISO?"
     },
     "SNAPSHOT": {
