--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -326,7 +326,9 @@
       "WEB_SHELL": "WebShell",
       "VM_ACCESS": "Access VM",
       "VM_ACCESS_TITLE": "Virtual Machine",
-      "LOGS": "View logs"
+      "LOGS": "Log View",
+      "CREATE_VM_LOGS_TOKEN": "Create token",
+      "INVALIDATE_VM_LOGS_TOKEN": "Invalidate token"
     },
     "RESOURCE_USAGE": {
       "TITLE": "Resource usage",
@@ -1488,6 +1490,9 @@
     "FAB": {
       "FOLLOW_LOG": "Follow log",
       "STOP_FOLLOWING": "Stop following"
+    },
+    "TOKEN": {
+      "TOKEN_CREATED": "Token created"
     }
   },
   "SETTINGS": {
