feat(vm-snapshots): add validation for ability to revert a vm

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -60,7 +60,8 @@
     },
     "VM_SNAPSHOT": {
       "CONFIRM_DELETION": "Вы уверены, что хотите удалить этот снимок?",
-      "CONFIRM_REVERTING": "Вы уверены, что хотите вернуть владеющую ВМ к состоянию этого снимка?"
+      "CONFIRM_REVERTING": "Вы уверены, что хотите вернуть владеющую ВМ к состоянию этого снимка?",
+      "REVERT_NOT_ALLOWED": "Вычислительное предложение отличается от первоначального"
     },
     "TAG": {
       "CONFIRM_DELETION": "Вы уверены, что хотите удалить этот тег?"
