--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -61,7 +61,7 @@
     "VM_SNAPSHOT": {
       "CONFIRM_DELETION": "Are you sure you want to delete this snapshot?",
       "CONFIRM_REVERTING": "Are you sure you want to revert VM to this snapshot?",
-      "REVERT_NOT_ALLOWED": "Service offering differs from the original one"
+      "REVERT_NOT_ALLOWED": "Service offering differs from the original one."
     },
     "TAG": {
       "CONFIRM_DELETION": "Are you sure you want to delete this tag?"
