--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -61,7 +61,7 @@
     "VM_SNAPSHOT": {
       "CONFIRM_DELETION": "Вы уверены, что хотите удалить этот снимок?",
       "CONFIRM_REVERTING": "Вы уверены, что хотите вернуть владеющую ВМ к состоянию этого снимка?",
-      "REVERT_NOT_ALLOWED": "Вычислительное предложение отличается от первоначального"
+      "REVERT_NOT_ALLOWED": "Вычислительное предложение отличается от первоначального."
     },
     "TAG": {
       "CONFIRM_DELETION": "Вы уверены, что хотите удалить этот тег?"
